--- a/home.html
+++ b/home.html
@@ -1,10 +1,42 @@
 <<!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>gd</title>
-</head>
-<body>
 
-</body>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
+
+
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+   <body>
+
+
+      <div class="wrap">
+          <div class="intro_bg">
+              <div class="header">
+                  <div class="searchArea">
+
+<!--                     입력칸을 만들고 Search라는 글자를 넣어줌-->
+                      <input type="search" placeholder="Search">
+
+
+                  </div>
+
+
+                  <ul class="nav">
+                      <li><a href="#">Home</a></li>
+                      <li><a href="#">About</a></li>
+                      <li><a href="#">ssss</a></li>
+                      <li><a href="#">exit</a></li>
+
+
+                  </ul>
+              </div>
+
+          </div>
+
+      </div>
+
+   </body>
+
 </html>
