--- a/home.html
+++ b/home.html
@@ -1,42 +1,27 @@
-<<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
-<head>
-
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
-
-
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-   <body>
-
-
-      <div class="wrap">
-          <div class="intro_bg">
-              <div class="header">
-                  <div class="searchArea">
-
-<!--                     입력칸을 만들고 Search라는 글자를 넣어줌-->
-                      <input type="search" placeholder="Search">
-
-
-                  </div>
-
-
-                  <ul class="nav">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">ssss</a></li>
-                      <li><a href="#">exit</a></li>
-
-
-                  </ul>
-              </div>
-
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <div class="wrap">
+      <div class="intro_bg">
+        <div class="header">
+          <div class="searchArea">
+            <form>
+              <input type="search" placeholder="search">
+              <span>검색하세요~~~~</span>
+            </form>
           </div>
-
-      </div>
-
-   </body>
-
+          <ul class="nav">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SERVICE</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
+        </div>
+    </div>
+  </body>
 </html>
