--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <div class="wrap">
       <div class="intro_bg">
         <div class="header">
-          <div class="searchArea">
+          <div class="searchrea">
             <form>
               <input type="search" placeholder="search">
               <span>검색하세요~~~~</span>
@@ -21,7 +21,35 @@
             <li><a href="#">CONTACT</a></li>
           </ul>
         </div>
+        <div class="intro_text">
+        <h1> 총알 오징어 </h1>
+        <h2 class="contents1">우리는 전기를 이용해 실수인처 새끼 오징어를 불법 포획 </h2>
         </div>
+        </div>
+
+        <ul class="amount">
+            <li><div class="contents1">지금까지 해먹은 돈</div>
+            <div class="res">1억</div>
+
+            </li>
+
+             <li><div class="contents1">씨를 말린 오징어 수</div>
+            <div class="res">321321</div>
+
+            </li>
+
+             <li><div class="contents1">최종 목표 </div>
+            <div class="res">321321</div>
+
+            </li>
+
+             <li><div class="contents1">간장</div>
+            <div class="res">321321</div>
+
+            </li>
+
+
+        </ul>
     </div>
   </body>
 </html>
