--- a/home.html
+++ b/home.html
@@ -50,6 +50,69 @@
 
 
         </ul>
+
+
+        <div class="main_text0">
+            <h1>ABOUT</h1>
+            <div class="contents1">우리는 재규어처럼 빠릅니다</div>
+
+            <ul class="icons">
+                <li>
+                    <div class="icon_img">
+                        <img src="images/icno1.svg">
+
+                    </div>
+
+                    <div class="contents1_bold">
+                        치밀한 계획
+                    </div>
+                    <div class="contents2">
+                        계획 하기 위해 태어났다
+                    </div>
+
+                    <div class="more">
+                        more
+                    </div>
+                </li>
+
+                <li>
+                    <div class="icon_img">
+                        <img src="images/icon2.svg">
+
+                    </div>
+
+                    <div class="contents1_bold">
+                        치밀한 계획
+                    </div>
+                    <div class="contents2">
+                        계획 하기 위해 태어났다
+                    </div>
+
+                    <div class="more">
+                        more
+                    </div>
+                </li>
+                <li>
+                    <div class="icon_img">
+                        <img src="images/icon0.svg">
+
+                    </div>
+
+                    <div class="contents1_bold">
+                        치밀한 계획
+                    </div>
+                    <div class="contents2">
+                        계획 하기 위해 태어났다
+                    </div>
+
+                    <div class="more">
+                        more
+                    </div>
+
+                </li>
+
+            </ul>
+        </div>
     </div>
   </body>
 </html>
