--- a/home.html
+++ b/home.html
@@ -54,7 +54,11 @@
 
         <div class="main_text0">
             <h1>ABOUT</h1>
-            <div class="contents1">우리는 재규어처럼 빠릅니다</div>
+            <div class="contents1">우리는 재규어처럼 빠릅니다
+            </div>
+
+
+
 
             <ul class="icons">
                 <li>
@@ -113,6 +117,55 @@
 
             </ul>
         </div>
+
+        <div class="main_text1">
+            <h1> SERVICE </h1>
+            <div class="contents1">엄격한 유통과정으로 까다로운 미시각입니다</div>
+            <div class="service">
+                <div class="food_photo">
+                    <img src="images/food.png">
+                </div>
+
+                <div class="contents2">
+                   <h2>이것은 오징어인가 문어인가?</h2>
+                   <br>나도 모르겠소 쿠팡 들어가고싶다
+
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="main_text2">
+            <ul>
+
+                <li>
+                    <div>
+                      <h1> CONTACT</h1>
+                    </div>
+                    <div>
+                        우리에 파트너십 고객이 되어주세요
+                    </div>
+                    <div class="more2">
+
+                        더 알아보기
+                    </div>
+
+
+                </li>
+                <li></li>
+
+            </ul>
+        </div>
+
+        <footer>
+          <div>LOGO</div>
+
+        <div><br>경기도 수원시 영통구 하동 광교 더샵레이크 파크 우리집 고고
+           <br> tel 000-000-000</div>
+
+        </footer>
+
     </div>
   </body>
 </html>
